fix stroopy message on smaller resolutions

--- a/app/styles/flash-message.scss
+++ b/app/styles/flash-message.scss
@@ -108,6 +108,7 @@
       font-size: 18px;
       font-weight: $book-weight;
       margin: 8px 0 0 0;
+      width: 85%;
     }
     button {
       float: right;
